--- a/toggleStyle.css
+++ b/toggleStyle.css
@@ -1,3 +1,8 @@
+:root {
+    --light-color: #74BF04;
+    --dark-color: #488C03; 
+  }
+
 .switch {
     height: 20px;
     width: 40px;
@@ -5,6 +10,7 @@
     border: 4px solid gray;
     cursor: pointer;
     border-radius: 1000px;
+    margin: 1%;
 }
 
 .switchInner {
@@ -33,14 +39,48 @@
 }
 
 .toggleActive {
-    background-color: #488C03;
-    border-color: #488C03;
+    background-color: var(--dark-color);
+    border-color: var(--dark-color);
 }
 
 .hidden{
     display: none;
 }
 
-#interfaceControlSpace{
+#featureContainer, .featureButton, #featureInput{
     font-family: "Momo Trust Display", sans-serif;
+}
+
+#featurePopUp {
+    background-color: RGB(100, 100, 100, 0.9);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+}
+#featurePopUpAllignment {
+    display: flex;
+    justify-content: center;
+}
+#featurePopUpContent {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.featureButton {
+    margin-top: 3%;
+}
+
+div#featureContainer {
+    background-color: var(--light-color);
+    width: 40%;
+    padding: 2%;
+    border-radius: 20px;
+}
+
+#featurePopUpText{
+    color: white;
 }
