--- a/toggleStyle.css
+++ b/toggleStyle.css
@@ -18,7 +18,6 @@
     height: 100%;
     width: 50%;
     background-color: white;
-    float: left;
     border-radius: 100%;
 }
 
@@ -32,15 +31,6 @@
 
 .toggleButton {
     display: flex;
-}
-
-.toggleInnerActive {
-    float: right;
-}
-
-.toggleActive {
-    background-color: var(--dark-color);
-    border-color: var(--dark-color);
 }
 
 .hidden{
@@ -74,7 +64,7 @@
     margin-top: 3%;
 }
 
-div#featureContainer {
+#featureContainer {
     background-color: var(--light-color);
     width: 40%;
     padding: 2%;
@@ -83,4 +73,17 @@ div#featureContainer {
 
 #featurePopUpText{
     color: white;
+}
+
+.subToggle {
+    margin-left: 30px;
+}
+
+.toggleInnerActive {
+    float: right;
+}
+
+.toggleActive {
+    background-color: var(--dark-color);
+    border-color: var(--dark-color);
 }
